# nessi_doc

./: .readthedocs.yaml  Doxyfile  Makefile  README.md  conf.py  index.rst  requirements.txt
cntr/: CMakeLists.txt  CMakeLists_old  cntr.hpp  cntr_bubble_decl.hpp  cntr_bubble_moving_decl.hpp  cntr_bubble_moving_impl.hpp  cntr_convolution_impl.hpp  cntr_decl.hpp  cntr_distributed_array_decl.hpp  cntr_distributed_timestep_array_impl.hpp  cntr_dyson_impl.hpp  cntr_dyson_moving_impl.hpp  cntr_dyson_moving_impl_copy.hpp  cntr_dyson_moving_impl_par.cpp  cntr_dyson_omp_impl.hpp  cntr_dyson_omp_impl_org.hpp  cntr_equilibrium_impl.hpp  cntr_function_decl.hpp  cntr_function_moving_impl.hpp  cntr_global_settings.hpp  cntr_herm_matrix_decl.hpp  cntr_herm_matrix_impl.hpp  cntr_herm_matrix_moving_decl.hpp  cntr_herm_matrix_moving_impl.hpp  cntr_herm_matrix_timestep_moving_decl.hpp  cntr_herm_matrix_timestep_moving_impl.hpp  cntr_herm_matrix_timestep_moving_view_decl.hpp  cntr_herm_matrix_timestep_moving_view_impl.hpp  cntr_impl.hpp  cntr_pseudodyson_impl.hpp  cntr_utilities_decl.hpp  cntr_utilities_impl.hpp  eigen_typedef.h  find_param.h  integration.hpp  ness.cpp  ness.hpp  ness2.cpp  ness2.hpp  ness2_dyson_decl.hpp  (+25 more)
cntr/hdf5/: hdf5_interface.cpp  hdf5_interface.hpp  hdf5_interface_cntr.hpp
examples/: accuracy.rst  holstein_impurity.rst
libcntr/: ContourFunctions.rst  Convolution.rst  Dyson.rst  FreeGFs.rst  HDF5.rst  InputFiles.rst  MPI.rst  Preliminaries.rst  PythonTools.rst  Summary.rst  Timeslices.rst
sphinx_docs/: api_reference.rst  background.rst  examples_main.rst  getting_started.rst  manual_libcntr.rst  manual_steadystate.rst  manual_truncated.rst  welcome.rst
sphinx_docs/_static/: custom.css
sphinx_docs/examples/: holstein_dmft.rst  hubbard_chain.rst  hubbard_trans_inv.rst  ness.rst  truncation.rst
sphinx_docs/libcntr/: Diagrams.rst  GreenFunctions.rst  Map.rst  SimpleAlgebra.rst  Utilities.rst  VIE2.rst
